--- a/src/main.css
+++ b/src/main.css
@@ -226,10 +226,10 @@ a:hover {
     background-size: 100%;
     border-radius: 50%;
     margin: 20px auto;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     display: inline-block;
-    background-image: url("/assets/20230327_162746~2.jpg");
+    background-image: url("/assets/PXL_20221104_130641005~2.jpg");
 }
 
 footer {
